--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2024"
 crate-type = ["cdylib"]
 
 [dependencies]
+axum = { version = "0.8", default-features = false, features = ["query"] }
+serde = { version = "1.0", features = ["derive"] }
+tower-service = "0.3.3"
 worker = { version = "0.7", features = ['http', 'axum'] }
 worker-macros = { version = "0.7", features = ['http'] }
-axum = { version = "0.8", default-features = false }
-tower-service = "0.3.3"
