--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ crate-type = ["cdylib"]
 [dependencies]
 worker = { version = "0.7", features = ["http"] }
 worker-macros = { version = "0.7", features = ["http"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.9"
+serde_json = "1.0"
